[tool.poetry]
name = "starbucksdb"
version = "0.1.0"
description = ""
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.1"
scrapy = "2.11.2"
peewee = "3.17.5"
colorlog = "6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
