[project]
name = "starbucksdb"
version = "0.1.0"
description = ""
authors = [{ name = "Jerry Ng", email = "ngshiheng@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
dependencies = ["scrapy>=2.11.2,<3", "peewee>=3.17.5,<4", "colorlog>=6.8.2,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
